<resources>
    <string name="app_name">LinkNotes</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Confirmation Dialog Text -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>

    <!-- Editnote Activity -->
    <string name="editnote_activity_title">Add New Note</string>
    <string name="editnote_title_suggestion">Note Title...</string>
    <string name="editnote_note_type_suggestion">note type...</string>
    <string name="editnote_nickname_suggestion">nicknames...</string>
    <string name="editnote_entry_type_suggestion">entry type...</string>
    <string name="editnote_entry_content_suggestion">Enter content...</string>
    <string name="editnote_save_btn">SAVE</string>
    <string name="editnote_add_entry_btn">ADD NEW ENTRY</string>
    <string name="editnote_add_tag_btn">ADD NEW TAGS</string>
    <string name="editnote_add_tag_chip_text" />
    <string name="editnote_num_entries">Showing %1$d entries</string>
    <string name="editnote_note_image_desc">Note Image</string>
    <string name="editnote_delete_button_desc">Delete Button</string>
    <string name="editnote_delete_entry_button_desc">Delete Entry Button</string>
    <string name="editnote_cancel_edit_button_desc">Cancel Edit Note</string>
    <string name="editnote_add_tag_button_desc">Add Tag</string>
    <string name="editnote_note_type_text">Note Type: </string>
    <string name="editnote_entry_type_text">Entry Type: </string>
    <string name="editnote_nicknames_text">Nicknames: </string>
    <string name="editnote_delete_entry_confirmation">Are you sure you want to delete this entry?</string>
    <string name="editnote_delete_note_confirmation">Are you sure you want to delete the note \"%s\"? This cannot be undone</string>
    <string name="editnote_remove_tag_confirmation">Are you sure you want to remove the %s tag from this note?</string>
    <string name="editnote_create_new_tag_confirmation">The tag \"%s\" does not yet exist. Are you sure you want to create it?</string>
    <string name="editnote_cancel_edit_confirmation">Are you sure you want to discard these changes?</string>
    <string name="editnote_undo_button_desc">Undo</string>
    <string name="editnote_redo_button_desc">Redo</string>
    <string name="editnote_add_image">Add from Google Photos</string>

    <!-- Text editing -->
    <string name="bold_content_desc">Bold</string>
    <string name="italic_content_desc">Italics</string>
    <string name="bullet_list_content_desc">Bulleted List</string>
    <string name="numbered_list_content_desc">Numbered List</string>
    <string name="text_size_content_desc">Text Size</string>
    <string name="strikethrough_content_desc">Strikethrough</string>
    <string name="underlined_content_desc">Underlined</string>
    <string name="add_link_content_desc">Add Link</string>
    <string name="add_photo_content_desc">Add Photo</string>

    <!-- Viewnote Activity -->
    <string name="viewnote_num_entries">Showing %1$d entries</string>
    <string name="viewnote_edit_btn">EDIT</string>

    <!-- Search activity -->
    <string name="search_add_note">Add new note</string>
    <string name="note_icon">Note Icon</string>

    <string name="nav_advanced_search_title">Advanced Search</string>
    <string name="nav_search_filters_title">Search By</string>
    <string name="nav_sort_order_title">Order Results</string>
    <string name="nav_sort_order_recent">Recent</string>
    <string name="nav_sort_order_alpha">Alphabetical</string>
    <string name="nav_search_filter_titles">Titles</string>
    <string name="nav_search_filter_tags">Tags</string>
    <string name="nav_sign_out_title">Sign Out</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="generic_confirm">Confirm</string>
    <string name="generic_cancel">Cancel</string>

    <!-- Misc -->
    <string name="unsaved_changes_recovery_confirmation">You have unsaved changes. Would you like to recover them?</string>
    <string name="unsaved_changes_recovery_second_confirmaton">Are you sure you want to discard your unsaved changes?</string>

</resources>
