<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/nav_sort_order_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_order_recent"
                    android:title="@string/nav_sort_order_recent"
                    android:checkable="true"
                    app:actionLayout="@layout/view_drawer_radio_btn" />
                <item
                    android:id="@+id/sort_order_alpha"
                    android:title="@string/nav_sort_order_alpha"
                    android:checkable="true"
                    app:actionLayout="@layout/view_drawer_radio_btn" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_search_filters_title">
        <menu>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/search_filter_title"
                    android:title="@string/nav_search_filter_titles"
                    android:checkable="true"
                    app:actionLayout="@layout/view_drawer_checkbox" />
                <item
                    android:id="@+id/search_filter_tags"
                    android:checkable="true"
                    android:title="@string/nav_search_filter_tags"
                    app:actionLayout="@layout/view_drawer_checkbox"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/advanced_search"
        android:title="@string/nav_advanced_search_title" />
</menu>