<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_quarter_vertical_padding"
    android:layout_marginBottom="@dimen/activity_quarter_vertical_padding"
    app:cardBackgroundColor="@color/entry_card_background"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/entry_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editnote_entry_type_text"
            style="?attr/textAppearanceSubtitle1Bold"
            android:layout_margin="@dimen/base_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/entry_type_editable"
            app:layout_constraintTop_toTopOf="@+id/entry_type_editable"
            app:layout_constraintBottom_toBottomOf="@id/entry_type_editable" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/entry_type_editable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_padding"
            android:hint="@string/editnote_entry_type_suggestion"
            android:inputType="text"
            style="?attr/textAppearanceSubtitle1"
            android:autofillHints=""
            app:layout_constraintStart_toEndOf="@id/entry_type_title"
            app:layout_constraintTop_toTopOf="@+id/delete_button"
            app:layout_constraintBottom_toBottomOf="@id/delete_button" />

        <ImageView
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_base_padding"
            android:layout_marginEnd="@dimen/half_base_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_dialog"
            android:contentDescription="@string/editnote_delete_entry_button_desc" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/activity_half_horizontal_padding"
            app:layout_constraintTop_toBottomOf="@id/entry_type_editable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/google_photos"
            app:iconSize="@dimen/double_base_padding"
            app:iconTint="@null"
            android:backgroundTint="@android:color/white"
            android:text="@string/editnote_add_image"
            android:textColor="@android:color/black"
            android:layout_marginBottom="@dimen/half_base_padding"
            app:layout_constraintTop_toBottomOf="@id/images"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/entry_type_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="16dp"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/images"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="type" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>